<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/viewName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="15dp"
        android:text="@string/view_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHead" />

    <TextView
        android:id="@+id/viewEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="63dp"
        android:layout_marginBottom="18dp"
        android:text="@string/view_email"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="91dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnOK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEmail" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/viewEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewName" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="31dp"
        android:text="@string/button_ok"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:text="@string/button_clear"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/viewResult"
        app:layout_constraintEnd_toEndOf="@+id/btnOK"
        app:layout_constraintStart_toStartOf="@+id/btnOK"
        app:layout_constraintTop_toBottomOf="@+id/btnOK" />

    <TextView
        android:id="@+id/viewResult"
        android:layout_width="399dp"
        android:layout_height="85dp"
        android:layout_marginBottom="55dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

    <TextView
        android:id="@+id/viewHead"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="#2196F3"
        android:paddingTop="10dp"
        android:text="@string/view_head"
        android:textAlignment="center"
        android:textColor="#E3DDDD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/viewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>